# Python-Scratch

./: .gitignore  .pre-commit-config.yaml  NOTES.MD  README.md  basics.py  pydantic-NOTES.MD  pydantic-v2.py  pyproject.toml
hooks/: check_uv_lock.py
scripts/fastapi/: NOTES.md  main.py
scripts/fastapi/templates/: layout.html
