[project]
name = "Pydantic-V2"
version = "1.0.0"
description = "Learning Pydantic V2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.1.0",
    "pytest>=9.0.3",
    "ruff>=0.9.5",
]
